--- a/iis-project/react/src/components/Header.css
+++ b/iis-project/react/src/components/Header.css
@@ -1,6 +1,15 @@
 .guest-header {
     display: flex;
-    justify-content: space-evenly;
-    border: 2px solid #000;
+    justify-content: flex-end;
+    align-items: center;
+    /* padding-right: 15px; */
+    /* border: 2px solid #000; */
     margin: 0;
+    background-color: gray;
+    height: 6vh;
+}
+
+
+.header-text{
+    margin: 10px;
 }
