--- a/iis-project/react/src/components/Main.css
+++ b/iis-project/react/src/components/Main.css
@@ -1,8 +1,15 @@
 .main{
     display: flex;
     flex-direction: column;
-    /* align-content: center; */
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin:0;
     /* width: 100vw; */
+}
+
+.app-body{
+    margin: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: cetner;
+    /* border: 2px solid blue; */
 }
