feat(category select, locat selecet,event display)
Co-authored-by: Marek Buch <Maarksen@users.noreply.github.com>

--- a/iis-project/react/src/components/styles/Event.css
+++ b/iis-project/react/src/components/styles/Event.css
@@ -5,7 +5,8 @@
     max-width: 300px;
     min-width: 300px;
     cursor: pointer;
-    background-color: lightblue
+    background-color: orange;
+    overflow: hidden;
 
     
     
