--- a/iis-project/react/src/components/styles/Header.css
+++ b/iis-project/react/src/components/styles/Header.css
@@ -5,7 +5,7 @@
     /* padding-right: 15px; */
     /* border: 2px solid #000; */
     margin: 0;
-    background-color: gray;
+    background-color: yellow;
     height: 6vh;
 }
 
