--- a/iis-project/react/src/App.css
+++ b/iis-project/react/src/App.css
@@ -1,10 +1,10 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+main {
+    margin: 0 auto;
+    padding: 0 5%;
+    text-align: center;
 }
 
+/*
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -66,31 +66,58 @@ label {
 
 /* Button styling */
 button {
-    background-color: #4caf50;
-    /* Green background color */
-    color: white;
-    /* White text color */
+    color: #333;
     padding: 10px 15px;
     margin: 5px 10px;
     border: none;
-    border-radius: 4px;
+    border-radius: 8px;
     cursor: pointer;
 }
 
 /* Hover effect on button */
 button:hover {
-    background-color: #45a049;
+    opacity: 0.8;
 }
 
-.delete-button {
-    background-color: #dc3545;
-    /* Red background color */
+.primary-btn {
+    background-color: #4caf50;
     color: white;
+    border: none;
 }
 
-.delete-button:hover {
-    background-color: #c82333;
+.secondary-btn {
+    background-color: #008CBA;
+    color: white;
+    border: none;
 }
+
+.delete-btn {
+    background-color: orange;
+    color: white;
+    border: none;
+}
+
+.horizontal-buttons {
+    display: flex;
+    margin: 5px 10px;
+}
+
+.horizontal-buttons button {
+    padding: 8px 16px;
+    margin: 0px;
+    border-radius: 0px;
+    transition: background-color 0.3s ease;
+}
+
+.horizontal-buttons button:first-child{
+    border-radius: 8px 0px 0px 8px;
+
+}
+
+.horizontal-buttons button:last-child{
+    border-radius: 0px 8px 8px 0px;
+}
+
 
 ul {
     list-style-type: none;
@@ -106,30 +133,31 @@ li {
     grid-template-columns: 1fr 1fr;
 }
 
-header{
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-nav{
+nav {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;;
+    background-color: #333;
+    ;
 }
 
-.menu-item{
+.menu-item {
     margin: 10px;
 }
 
-.menu-item a{
+.menu-item a {
     color: white;
     text-decoration: none;
 }
 
-.menu-item a:hover{
+.menu-item a:hover {
     color: #45a049;
 }
 
@@ -144,8 +172,14 @@ nav{
     align-items: flex-start;
 }
 
-.end-aligned-row-flex-container{
+.end-aligned-row-flex-container {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+}
+
+.three-column-grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
 }
