--- a/iis-project/react/src/App.css
+++ b/iis-project/react/src/App.css
@@ -73,7 +73,12 @@ button {
     border-radius: 8px;
     cursor: pointer;
 }
-
+/* Style the active button */
+button.active {
+    background-color: #333; /* Choose a color for the active state */
+    color: #fff; /* Text color for the active state */
+    font-weight: bold;
+  }
 /* Hover effect on button */
 button:hover {
     opacity: 0.8;
