--- a/iis-project/react/src/App.css
+++ b/iis-project/react/src/App.css
@@ -127,9 +127,10 @@ button:hover {
 ul {
     list-style-type: none;
     padding: 0;
+    /* width: 30px; */
 }
 
-li {
+ul li {
     border: 1px solid #ccc;
     border-radius: 4px;
     padding: 15px;
