--- a/iis-project/react/src/App.css
+++ b/iis-project/react/src/App.css
@@ -74,12 +74,16 @@ button {
     border-radius: 8px;
     cursor: pointer;
 }
+
 /* Style the active button */
 button.active {
-    background-color: #333; /* Choose a color for the active state */
-    color: #fff; /* Text color for the active state */
+    background-color: #333;
+    /* Choose a color for the active state */
+    color: #fff;
+    /* Text color for the active state */
     font-weight: bold;
-  }
+}
+
 /* Hover effect on button */
 button:hover {
     opacity: 0.8;
@@ -105,7 +109,7 @@ button:hover {
 
 .horizontal-buttons {
     display: flex;
-    margin: 5px 10px;
+    margin: auto 5px;
 }
 
 .horizontal-buttons button {
@@ -221,4 +225,57 @@ textarea {
 .align-center {
     display: flex;
     align-items: center;
+}
+
+span {
+    margin: 5px;
+    text-align: left;
+}
+
+.events-list-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /* Creates 3 columns with equal width */
+    gap: 20px;
+    /* Adjust the gap between cards as needed */
+}
+
+.event-card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-color: #333;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    color: white;
+    max-width: 25vw;
+}
+
+.event-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px 8px 0px 0px;
+    backdrop-filter: blur(4px);
+}
+
+.event-card p {
+    margin: 10px;
+    word-wrap: break-word
+}
+
+.name {
+    font-size: 35px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    margin: 10px;
+}
+
+.long-name {
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    margin: 10px;
 }
