--- a/iis-project/react/src/App.css
+++ b/iis-project/react/src/App.css
@@ -156,7 +156,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     background-color: #333;
-    ;
+    height: 50px;
 }
 
 .menu-item {
@@ -278,4 +278,25 @@ span {
     color: white;
     text-align: center;
     margin: 10px;
+}
+
+.radio-form {
+    display: flex;
+    flex-direction: row;
+    border: 2px solid #333;
+    border-radius: 8px;
+    margin: 10px;
+}
+
+.radio-form label {
+    margin: 0 10px;
+}
+
+.radio-form input {
+    margin: 0 10px;
+    padding: 0;
+}
+
+.toast-position {
+    top: 50px !important;
 }
