--- a/iis-project/react/src/App.css
+++ b/iis-project/react/src/App.css
@@ -251,6 +251,11 @@ span {
     max-width: 25vw;
 }
 
+.event-card:hover {
+    box-shadow: 0 0 12px rgba(33, 33, 33, .2);
+    cursor: pointer;
+}
+
 .event-card img {
     width: 100%;
     height: 200px;
